<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="xyz.leezoom.o.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <xyz.leezoom.o.view.OImageView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:src="@color/colorAccent"
            tools:visibility="visible"
            tools:layout_height="400dp"/>
        <TextView
            android:id="@+id/hint_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hint_click_me"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ctrl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MarginTheme">

            <Button
                android:id="@+id/rec_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_rect"
                android:background="@null"
                style="?buttonBarButtonStyle"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/cir_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_circle"
                android:background="@null"
                style="?buttonBarButtonStyle"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/seek_bar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/MarginTheme"
                android:text="@string/hint_white_width"
                android:maxLines="1"/>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/MarginTheme"
                android:progress="0"
                android:max="100"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
